<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/category_app_settings">

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="update_check"
            app:summary="@string/update_check_sum"
            app:title="@string/update_check" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="hide_launcher_icon"
            app:summary="@string/hide_launcher_icon_sum"
            app:title="@string/hide_launcher_icon" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/category_time_display">

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="ampm"
            app:title="@string/ampm" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="segundos"
            app:summary="@string/segundosnahora_sum"
            app:title="@string/segundosnahora" />

        <EditTextPreference
            android:defaultValue="[TIME]"
            app:key="text_in_hour"
            app:summary="@string/textonahora_sum"
            app:title="@string/textonahora" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/category_developer_logs">

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:key="enablelogs"
            app:title="@string/verbose_logs" />

    </PreferenceCategory>

</PreferenceScreen>
